[tool.poetry]
name = "api_testing"
version = "0.1.0"
description = ""
authors = ["sazzeck <sazzeckprog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
pydantic = "^1.10.2"
fastapi = "^0.85.1"
SQLAlchemy = "^1.4.42"
asyncpg = "^0.26.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
